ADD custom theme color

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -17,4 +17,6 @@
         <li>Your template at <code><a href="{{ 'C:/Users/33672/SymfonyProjects/book_companion/templates/home/index.html.twig'|file_link(0) }}">templates/home/index.html.twig</a></code></li>
     </ul>
 </div>
+    <button>Button</button>
+    <input type="submit">
 {% endblock %}
