ADD toggle button dark/light theme + navbar

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,5 +1,7 @@
+{% include 'navbar.html.twig' %}
+
 <!DOCTYPE html>
-<html>
+<html id="theme">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -16,6 +18,7 @@
 </head>
 <body>
 <main class="container">
+    {% block navbar %}{% endblock %}
     {% block body %}{% endblock %}
 </main>
 </body>
