--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -2,4 +2,10 @@ $primary-500: #009688;
 $primary-600: #00897b;
 $primary-700: #00796b;
 
+img {
+  width: 125px;
+  float: left;
+  margin-right: 20px;
+}
+
 @import '~@picocss/pico/scss/pico.scss';
