--- a/templates/registration/confirmation_email.html.twig
+++ b/templates/registration/confirmation_email.html.twig
@@ -1,11 +1,11 @@
-<h1>Hi! Please confirm your email!</h1>
+<h1>Bienvenue sur Book Companion !</h1>
+<h2>Veuillez valider votre email</h2>
 
 <p>
-    Please confirm your email address by clicking the following link: <br><br>
-    <a href="{{ signedUrl }}">Confirm my Email</a>.
-    This link will expire in {{ expiresAtMessageKey|trans(expiresAtMessageData, 'VerifyEmailBundle') }}.
+    Veuillez valider votre email en cliquant sur le lien suivant: <br><br>
+    <a href="{{ signedUrl }}">Valider mon email</a>.
 </p>
 
 <p>
-    Cheers!
+    Bonne journée !
 </p>
