--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Register{% endblock %}
+{% block title %}Créer un compte{% endblock %}
 
 {% block body %}
     {% for flashError in app.flashes('verify_email_error') %}
@@ -10,15 +10,14 @@
     {% for flashSuccess in app.flashes('success') %}
         <div class="alert alert-success" role="alert">{{ flashSucess }}</div>
     {% endfor %}
-    <h1>Register</h1>
+    <h1>Créer un compte</h1>
 
     {{ form_start(registrationForm) }}
     {{ form_row(registrationForm.email) }}
     {{ form_row(registrationForm.plainPassword, {
-        label: 'Password'
+        label: 'Mot de passe'
     }) }}
-    {{ form_row(registrationForm.agreeTerms) }}
 
-    <button type="submit" class="btn">Register</button>
+    <button type="submit" class="btn">Créer mon compte</button>
     {{ form_end(registrationForm) }}
 {% endblock %}
