ADD HomeController when user not logged in + ListController + ProfileController + Redirection to listController after login

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -8,4 +8,10 @@ img {
   margin-right: 20px;
 }
 
+#homepage-login-register {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+}
+
 @import '~@picocss/pico/scss/pico.scss';
