--- a/templates/navbar.html.twig
+++ b/templates/navbar.html.twig
@@ -8,23 +8,6 @@
         {% if is_granted('ROLE_USER') %}
         <ul>
             <li>
-                <a href="{{ path('home') }}" aria-label="Aller à la page d'accueil">
-                    <svg xmlns="http://www.w3.org/2000/svg"
-                         width="1em"
-                         height="1em"
-                         viewBox="0 0 24 24">
-                        <g fill="none">
-                            <path d="M22 20v-7.826a4 4 0 0 0-1.253-2.908l-7.373-6.968a2 2 0 0 0-2.748 0L3.253 9.266A4 4 0 0 0 2 12.174V20a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2z"
-                                  stroke="currentColor"
-                                  stroke-width="2"
-                                  stroke-linecap="round"
-                                  stroke-linejoin="round"
-                            />
-                        </g>
-                    </svg>
-                </a>
-            </li>
-            <li>
                 <a href="{{ path('search') }}" aria-label="Aller à la page de recherche">
                     <svg xmlns="http://www.w3.org/2000/svg"
                          width="1em"
@@ -37,7 +20,7 @@
                 </a>
             </li>
             <li>
-                <a href="#">
+                <a href="{{ path('list') }}" aria-label="Aller à la list de lecture">
                     <svg xmlns="http://www.w3.org/2000/svg"
                          width="1em"
                          height="1em"
@@ -49,7 +32,7 @@
                 </a>
             </li>
             <li>
-                <a href="#">
+                <a href="{{ path('profile') }}" aria-label="Aller à la page de profil utilisateur">
                     <svg xmlns="http://www.w3.org/2000/svg"
                          width="1em"
                          height="1em"
