--- a/templates/search/index.html.twig
+++ b/templates/search/index.html.twig
@@ -18,7 +18,7 @@
                     {% else %}
                         <h5>Auteur inconnu</h5>
                     {% endif %}
-            <button>Ajouter à la liste</button>
+            <button>Ajouter à ma liste</button>
         </article>
         {% endfor %}
     </section>
