--- a/templates/profile/index.html.twig
+++ b/templates/profile/index.html.twig
@@ -1,20 +1,20 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello ProfileController!{% endblock %}
+{% block title %}Profil{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'C:/Users/33672/SymfonyProjects/book_companion/src/Controller/ProfileController.php'|file_link(0) }}">src/Controller/ProfileController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/Users/33672/SymfonyProjects/book_companion/templates/profile/index.html.twig'|file_link(0) }}">templates/profile/index.html.twig</a></code></li>
-    </ul>
-</div>
+    <article>
+        {% for message in app.flashes('success') %}
+            {{ message }}
+        {% endfor %}
+        <h1>Profil de {{ app.user.email }}</h1>
+        <ul>
+            <li>
+                Email : {{ app.user.email }}
+            </li>
+            <li>
+                Mot de Passe : ****** <a href="{{ path('update_password') }}" role="button" class="contrast outline">Modifier mon mot de passe</a>
+            </li>
+        </ul>
+    </article>
 {% endblock %}
