ADD delete user account

--- a/templates/profile/index.html.twig
+++ b/templates/profile/index.html.twig
@@ -17,4 +17,8 @@
             </li>
         </ul>
     </article>
+    <article>
+        <h1>Supprimer le compte</h1>
+        <a href="{{ path('delete_account') }}" role="button" class="contrast outline">Supprimer mon compte</a>
+    </article>
 {% endblock %}
