--- a/templates/search/index.html.twig
+++ b/templates/search/index.html.twig
@@ -5,6 +5,7 @@
 {% block body %}
     {{ form_start(searchForm) }}
     {{ form_row(searchForm.searchField) }}
+    {{ form_row(searchForm.author) }}
     <button class="btn btn-primary">Rechercher</button>
     {{ form_end(searchForm) }}
     {% if data.items is defined %}
