--- a/templates/list/index.html.twig
+++ b/templates/list/index.html.twig
@@ -1,20 +1,60 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello ListController!{% endblock %}
+{% block title %}Liste{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+    <article>
+        <h2>
+            Book title
+            <progress value="20" max="100"></progress>
+        </h2>
+        <details>
+            <summary>Collapsible elements 1</summary>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque urna diam, tincidunt nec porta sed, auctor id velit. Etiam venenatis nisl ut orci consequat, vitae tempus quam commodo. Nulla non mauris ipsum. Aliquam eu posuere orci. Nulla convallis lectus rutrum quam hendrerit, in facilisis elit sollicitudin. Mauris pulvinar pulvinar mi, dictum tristique elit auctor quis. Maecenas ac ipsum ultrices, porta turpis sit amet, congue turpis.</p>
+        </details>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+        <details>
+            <summary>Collapsible elements 2</summary>
+            <ul>
+                <li>Vestibulum id elit quis massa interdum sodales.</li>
+                <li>Nunc quis eros vel odio pretium tincidunt nec quis neque.</li>
+            </ul>
+        </details>
+    </article>
+    <article>
+        <h2>
+            Book title
+            <progress value="33" max="100"></progress>
+        </h2>
+        <details>
+            <summary>Collapsible elements 1</summary>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque urna diam, tincidunt nec porta sed, auctor id velit. Etiam venenatis nisl ut orci consequat, vitae tempus quam commodo. Nulla non mauris ipsum. Aliquam eu posuere orci. Nulla convallis lectus rutrum quam hendrerit, in facilisis elit sollicitudin. Mauris pulvinar pulvinar mi, dictum tristique elit auctor quis. Maecenas ac ipsum ultrices, porta turpis sit amet, congue turpis.</p>
+        </details>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'C:/Users/33672/SymfonyProjects/book_companion/src/Controller/ListController.php'|file_link(0) }}">src/Controller/ListController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/Users/33672/SymfonyProjects/book_companion/templates/list/index.html.twig'|file_link(0) }}">templates/list/index.html.twig</a></code></li>
-    </ul>
-</div>
+        <details>
+            <summary>Collapsible elements 2</summary>
+            <ul>
+                <li>Vestibulum id elit quis massa interdum sodales.</li>
+                <li>Nunc quis eros vel odio pretium tincidunt nec quis neque.</li>
+            </ul>
+        </details>
+    </article>
+    <article>
+        <h2>
+            Book title
+            <progress value="100" max="100"></progress>
+        </h2>
+        <details>
+            <summary>Collapsible elements 1</summary>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque urna diam, tincidunt nec porta sed, auctor id velit. Etiam venenatis nisl ut orci consequat, vitae tempus quam commodo. Nulla non mauris ipsum. Aliquam eu posuere orci. Nulla convallis lectus rutrum quam hendrerit, in facilisis elit sollicitudin. Mauris pulvinar pulvinar mi, dictum tristique elit auctor quis. Maecenas ac ipsum ultrices, porta turpis sit amet, congue turpis.</p>
+        </details>
+
+        <details>
+            <summary>Collapsible elements 2</summary>
+            <ul>
+                <li>Vestibulum id elit quis massa interdum sodales.</li>
+                <li>Nunc quis eros vel odio pretium tincidunt nec quis neque.</li>
+            </ul>
+        </details>
+    </article>
 {% endblock %}
